# Compiler

./: .gitignore  CMakeLists.txt  README.md  kompilator.c
src/: command.c  command.h  compilation.c  compilation.h  compiler_main.c  vector.h
